--- a/src/app/shared-modules/footer/footer.component.scss
+++ b/src/app/shared-modules/footer/footer.component.scss
@@ -9,7 +9,8 @@
     position: relative;
     display: flex;
     align-items: center;
-    margin-top: 150px;
+    background: linear-gradient(to bottom, #000000, #121212);
+    color: white;
 }
 
 .container {
@@ -21,7 +22,7 @@
 
 a {
     text-decoration: none;
-    color: var(--dark);
+    color: #fff;
     font-weight: 400;
     transition: 0.3s ease-in;
     border-bottom: 1px solid transparent;
@@ -48,23 +49,11 @@ button {
     display: flex;
 }
 
-.footer_video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    overflow: hidden;
-    border: none;
-}
 
 // EDITED
 
 .footer_inner {
     padding: 0;
-    background: var(--light);
     backdrop-filter: blur(50px);
     border: 0.1px solid rgba(233, 232, 232, 0.208);
     border-radius: 5px;
@@ -91,7 +80,7 @@ button {
 }
 
 .email-address {
-    border: 1px solid #000;
+    border: 1px solid #fff;
     margin-left: 20px;
     padding: 10px;
     border-radius: 10px;
@@ -130,7 +119,6 @@ form {
     align-items: center;
     justify-content: space-between;
     width: min(100%, 400px);
-    border-bottom: 1px solid var(--dark);
 }
 
 input {
@@ -150,7 +138,7 @@ input:focus {
 }
 
 input::placeholder {
-    color: var(--dark);
+    color: #fff;
 }
 
 form {
