--- a/src/app/products/product-page/product-page.component.html
+++ b/src/app/products/product-page/product-page.component.html
@@ -3,8 +3,7 @@
 
 <div class="product-container">
     <div class="product-slider">
-        
-        
+        <app-product-item></app-product-item>
     </div>
 </div>
 
